--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,6 +47,39 @@ a {
     border-radius: 999px;
 }
 
+.btn:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+.heading {
+    color: #171100;
+    font-family: var(--font-heading);
+    font-weight: 700;
+    letter-spacing: -1.16px;
+}
+
+.heading.lv1 {
+    font-size: 5.8rem;
+    line-height: 1.17; /* 117.241% */
+}
+
+.heading.lv2 {
+    font-size: 3.8rem;
+    line-height: 1.26; /* 126.316% */
+}
+
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 2);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.break-all {
+    word-break: break-all;
+}
+
 /* ==================== Header ==================== */
 
 .header {
@@ -203,15 +236,6 @@ a {
     padding: 64px 0 0 130px;
 }
 
-.content-block .heading {
-    color: #171100;
-    font-family: var(--font-heading);
-    font-size: 5.8rem;
-    font-weight: 700;
-    line-height: 1.17241; /* 117.241% */
-    letter-spacing: -1.16px;
-}
-
 .content-block .desc {
     color: #5f5b53;
     font-size: 1.8rem;
@@ -243,6 +267,11 @@ a {
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 1.6667; /* 166.667% */
+    cursor: pointer;
+}
+
+.content-block .watch-video:hover {
+    opacity: 0.9;
 }
 
 .content-block .watch-video .icon {
@@ -265,4 +294,147 @@ a {
     font-weight: 700;
     line-height: 1.22727; /* 122.727% */
     padding: 0 8px 0 28px;
+}
+
+/* ==================== Popular ==================== */
+.popular {
+    padding: 200px 0;
+}
+
+/* Popular top */
+.popular .popular-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.popular .info {
+}
+
+.popular-top .heading {
+    color: #171100;
+    font-family: var(--font-heading);
+    font-weight: 700;
+    letter-spacing: -0.76px;
+}
+
+.popular-top .desc {
+    margin-top: 16px;
+    width: 458px;
+    color: #5f5b53;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.667; /* 166.667% */
+}
+
+.popular .controls {
+    display: flex;
+    gap: 18px;
+}
+
+.popular-top .control-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    background: transparent;
+    border-radius: 50%;
+}
+
+.popular .control-btn:hover {
+    background: var(--primary-color);
+    color: #fff;
+    cursor: pointer;
+}
+
+/* Popular bottom */
+.course-list {
+    margin-top: 55px;
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.course-list .course-item {
+    flex: 1;
+    border-radius: 12px;
+    background: #fff;
+    border: 1px solid #e2dfda;
+}
+
+.course-list .course-item:hover {
+    border-color: transparent;
+    box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+
+.course-list .thumb {
+    width: calc(100% + 2px);
+    height: 278px;
+    object-fit: cover;
+    margin: -1px;
+    border-radius: 12px 12px 0px 0px;
+}
+
+.course-list .info {
+    margin: 16px 22px 22px;
+}
+
+.course-list .foot,
+.course-list .rating,
+.course-list .head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.course-list .title a {
+    padding-right: 6px;
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.667; /* 166.667% */
+}
+
+.course-list .rating {
+}
+
+.course-list .star {
+}
+
+.course-list .value {
+    color: #fea31b;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75; /* 175% */
+    margin-left: 6px;
+}
+
+.course-list .desc {
+    margin-top: 6px;
+    color: #5f5b53;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85714; /* 185.714% */
+}
+
+.course-list .foot {
+    margin-top: 12px;
+}
+
+.course-list .price {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.667; /* 166.667% */
+}
+
+.course-list .btn {
+    border: none;
+}
+
+.course-list .btn:hover {
+    background: var(--primary-color);
 }
